# Build the ibv_display_local_infiniband_device_statistics program

project (ibv_display_local_infiniband_device_statistics C)

add_executable (ibv_display_local_infiniband_device_statistics "ibv_display_local_infiniband_device_statistics.c")

target_link_libraries (ibv_display_local_infiniband_device_statistics ibverbs rt)
